# AutoUmp

./: .gitignore  README.md  data_042117.xlsx  lookup32.txt
AutoUmp/: .cproject  .project  Makefile  XUF216-512-TQ128-C20.xn  decompressor-80c7675a  decompressor-b657dd88  old_assembly.txt  spanning-xn-v0-04c8d8bb
AutoUmp/.build/: pca.d  pca.xml
AutoUmp/src/: AutoUmp.xc
BallFilterTest/: .cproject  .notes.md.swp  .project  CMakeLists.txt  README.md  miscNoBalls.sh  notes.md  openCatcherBalls.sh  openPitcherBalls.sh  runTest.sh  simpleBallDetection.sh
BallFilterTest/scripts/: README  rename.sh
BallFilterTest/src/: .algs.c.swp  .detect_objects.c.swp  .main.cpp.swp  .simple_object_tracker.c.swp  .simple_object_tracker.h.swp  algs.c  algs.h  denoisemain.c  detect_objects.c  detect_objects.h  hungarian.c  hungarian.h  main.cpp  main.hpp  object_tracker.c  object_tracker.h  queue.c  queue.h  simple_object_tracker.c  simple_object_tracker.h  testmain.c
BitImageViewer/: CMakeLists.txt
CalculationTester/: .~lock.data.xlsx#  CMakeLists.txt  intersection_possibilities.csv
DenoiseTest/: .project  Makefile  XUF216-512-TQ128-C20.xn
DenoiseTest/.build/: pca.xml
FloodFillViewer/: CMakeLists.txt
FullImageViewer/: CMakeLists.txt
IntersectionViewer/: .project  CMakeLists.txt  Makefile_Old  angle_lookup.csv  data.xlsx
LookupTable/: main.cpp  meh.txt  notes.md
MockOV7740/: .cproject  .project  Makefile  XUF216-512-TQ128-C20.xn
MockUART/: .cproject  .project  Makefile
ObjectPackerTest/: .cproject  .project  Makefile
lib_locks/: .cproject
lib_xassert/: .cproject
(+254 files in other folders)
